# vr-jugglua

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  CreateLaunchers.cmake  DashboardBuildInitialCache.cmake.in  Doxyfile  FindVPR20.cmake  README  README.markdown  README.mkd  VRJuggLua-config.cmake.in  astylerc  help.lua  helpLuabind.lua  helpOsgLua.lua  lua.c  minimal.lua  test.lua  vrjugglua-config-build-tree.cmake.in  vrjugglua-config.cmake.in
assets/icon/: generate.sh
assets/models/: clippy.ive
cmake/: CreateLaunchers.cmake  FindVPR22.cmake  FindVRJuggler.cmake  FindVRJuggler22.cmake  FindVRJuggler30.cmake  Findcppcheck.cmake  LuaTargets.cmake  MarkdownTargets.cmake
cmake/launcher-templates/: genericlauncher.sh.in
design-doc/: Navigation-v2.lyx
doc/: BINARY_README  BinarySnapshotReadme.mkd  CMakeLists.txt  ComplexState.md  DevTips.mkd  Links.md  chrome_search_lua_reference.mkd
doc/generation/: config.ld  createlink.lua  default_lua_globals.lua  do_all.sh  generate_default_lua_globals_table.lua  generation_warning.lua  is_osg_wrapper.lua  luabind_globals.lua  main.lua  osgLua_docs.lua  output_html_docs.sh  upload_html_docs.sh  vrjlua_docglobals.lua  vrjlua_luabind.lua
doc/generation/bootstrap/: default_lua_globals.lua  generate_default_lua_globals_table.lua  refresh_all.sh
doc/generation/docgen_utils/: fake_luadoc.lua  skip_documenting_entity.lua  warning.lua
doc/generation/vrjlua_inputs/: constructor_args.lua  function_docs.lua
examples/: bottle.mtl  nav-testbed-quick-docs.txt  navtestbed-example.lua  osgnav-statemachine.lua  osgnav.lua  purplecrayon.dae  sceneconfig.lua
examples/1-intro/: 1. READ THIS FIRST.txt  AddDirectly.lua  Change_Position_Interactively.lua  DisplayingText.lua  Group.lua  LoadModel.lua  Orientation.lua  README.txt  RelativeTo.lua  Simple_Model.lua  Simple_Object_Orientation.lua  Simple_Object_Set_Position.lua  Simple_Transform.lua  Simple_object.lua  Transformation.lua  TransparentGroup.lua
examples/2-input/: Tracking-Extended.lua  Tracking.lua
examples/3-interaction/: DrawingApp.lua  Wand-Object.lua
examples/4-finding-files/: FindingInModelSearchPath.lua  LookingWhereTheScriptIs.lua  ModelSearchPath.lua
examples/5-audio/: Ambient_Sound_Example.lua  sound_example.lua
examples/AppTemplate/: appdir.lua  loadModels.lua  main.lua
examples/advanced/: README.mkd  appdataexample.jconf  clippingPlane.lua  light_example.lua  osgnav-statemachine.lua  osgnav.lua  phong-shading.lua  wandsphere.lua
examples/in-progress/: DrawableShapes.lua  Line.lua  LineDrawingApp.lua  Simple_Object_Set_Position.lua  Simple_object.lua  countdown-text.lua  create-geometry.lua  newdraw.lua
examples/models/: basicfactory.ive  wavyroom.ive
examples/navtestbed-based/: 1-minimal.lua  2-tracking-extended.lua  2-tracking.lua  3-drawing.lua  countdown-text.lua
extra/: ReadBoundsFile.lua  checkExamples  checkForOutdatedCode  generate-include-spreadsheet.sh  include-spreadsheet-sorted.csv  include-spreadsheet.csv  includecomparison.sh  upgrades.sed  upgrades.txt
extra/discount-2.1.2/: README.txt
package/macosx/: fixupbundle.cmake.in
saved-sessions/: simple-terrain-saved-log.lua
src/: CMakeLists.txt  FLTKNav.cpp  FLTKNav.h  FLTKNavMain.cpp  LuaOSGApp.cpp  LuaOSGApp.h  NavInteractive.cpp  NavInteractive.h  NavTestbedUI.fl  QTNavMain.cpp  lua.c  main.cpp
tests/: CMakeLists.txt  OsgNumericConversion.cpp  OsgPointers.cpp  OsgVectorConversion.cpp  PathSetupDummy.h  SetPropertyWithOsgType.cpp  shutdown-after-5-frames.lua
tests/data/: block1m.jt  block1m.osg  cone.vps  headtranslated.ive
tests/luatests/: actions-canremove.lua  actions-loads.lua  inherit-osgapp.lua  initialize-devices.lua  minimal-osg.lua  minimal.lua  navtestbed-runs.lua  osg-accept-visitor.lua  osg-bbox-visitor.lua  osgapp-delegate-count-frameactions.lua  osgapp-delegate-count.lua  osgapp-delegate-devicedata.lua  osgapp-delegate-initdevices.lua  osgapp-delegate-useful.lua  osglua-enums.lua  (+16 more)
util/: find-deprecated.sh  gmtlToOsgMatrix.h  style-project.sh  update-cmake.sh
vrjugglua/: AddToLuaPaths.cpp  AddToLuaPaths.h  ApplyBinding.cpp  ApplyBinding.h  BindGadgetInterfacesToLua.cpp  BindGadgetInterfacesToLua.h  BindKernelToLua.cpp  BindKernelToLua.h  BindOsgAppToLua.cpp  BindOsgAppToLua.h  BindOsgToLua.cpp  BindOsgToLua.h  BindPositionInterfaceToLua.cpp  BindPositionInterfaceToLua.h  BindRunBufferToLua.cpp  BindRunBufferToLua.h  BindSonixToLua.cpp  BindSonixToLua.h  CMakeLists.txt  ConvertOsgPtrToOsgLuaPtr.h  FindVPRDLL.cpp  FindVPRDLL.h  Internal_AnalogInterface.cpp  Internal_AnalogInterface.h  Internal_DigitalInterface.cpp  Internal_DigitalInterface.h  Internal_PositionInterface.cpp  Internal_PositionInterface.h  Internal_StringInterface.cpp  Internal_StringInterface.h  LuaCInterfaceBegin.h  LuaCInterfaceEnd.h  LuaConsole.cpp  LuaConsole.h  LuaGCBlock.h  LuaInclude.h  LuaIncludeFull.h  LuaOSGApp.h  LuaPath.cpp  LuaPath.h  (+49 more)
vrjugglua/bindUtils/: WrapperClass_Macros.h
vrjugglua/binding_detail/: BindGadgetInterfacesToLua.cpp  BindGadgetInterfacesToLua.h  BindGadgetInterfacesToLua.inl  BindKernelToLua.cpp  BindKernelToLua.h  BindKernelToLua.inl  BindOsgToLua.cpp  BindOsgToLua.h  BindOsgToLua.inl  BindRunBufferToLua.cpp  BindRunBufferToLua.h  BindRunBufferToLua.inl  BindSonixToLua.cpp  BindSonixToLua.h  BindSonixToLua.inl  BindvrjLuaToLua.cpp  BindvrjLuaToLua.h  BindvrjLuaToLua.inl  OsgHelpers.cpp  OsgHelpers.h
vrjugglua/constants/: CMakeLists.txt  extract.lua
vrjugglua/fltk-console/: CMakeLists.txt  FLTKConsole.cpp  FLTKConsole.h  vrjlua-fltk-console.fl
vrjugglua/lua/: Actions.lua  AddAppDirectory.lua  CMakeLists.txt  DebugAxes.lua  Navigator.lua  Scene.lua  StateMachine.lua  StockModels.lua  Text.lua  TransparentGroup.lua  WandNavigator.lua  getScriptFilename.lua  nav-app-skeleton.lua  nav-testbed-launcher.lua  osgTools.lua  osgnav-testbed.lua  runfile.lua  sleep.lua  vrjlua-config.lua  vrjlua-init.lua
vrjugglua/qt-console/: CMakeLists.txt  QTCodeInput.cpp  QTCodeInput.h  QTConsole.cpp  QTConsole.h  QTConsoleMainWindow.ui  QTConsoleResources.qrc
(+12 files in other folders)
